added backgrpund color to nav

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     </head>
     <body>
-        <nav class="navbar navbar-light bg-light">
+        <nav class="navbar navbar-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Rock! Paper! Scissors!</a>
+              <a class="navbar-brand" href="#">Rock Paper Scissors</a>
             </div>
         </nav>
         <div class="Container">
